--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
+/*----------------------- VARIABLES  */
+:root {
+  /* Colors */
+  --main-clr: #f8ab15;
+  --white-clr: #fff;
+  --dark-clr: #333;
+  --lightGray-clr: #ccc;
+
+  /* Shadow */
+  --header-shadow: 2px 4px 5px rgba(0, 0, 0, 0.2);
+  --recipe-shadow: 0 8px 32px hsla(0, 0%, 10%, 0.1);
+  --hero-shadow: 0 0 1px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.02);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,16 +21,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./assets/img/bg.png);
-  color: #000;
   overflow-x: hidden;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 a {
   text-decoration: none !important;
 }
@@ -29,4 +35,5 @@ img {
   max-width: 100%;
   display: block;
   height: auto;
+  transition: 0.3s;
 }
