--- a/src/components/site/recipesList/recipesList.css
+++ b/src/components/site/recipesList/recipesList.css
@@ -3,6 +3,8 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 3rem;
   padding: 2rem 1rem;
+  max-width: 1140px;
+  margin: 0 auto;
 }
