--- a/src/pages/site/recipeDetails/recipeDetails.css
+++ b/src/pages/site/recipeDetails/recipeDetails.css
@@ -1,22 +1,247 @@
+/*---------------- Layout */
 .recipeInfo__container {
   display: grid;
   place-items: center;
 }
 
+/*------------------ Main */
 .recipeInfo {
-  width: 80%;
-  display: flex;
-  margin: 1rem auto;
-  background-color: #e5e5e5;
-}
-.recipeInfo__img {
-  flex: 1;
-  max-width: 100%;
-}
-.recipeInfo__content {
-  flex: 1;
-  padding: 4rem 2rem;
   display: flex;
   flex-direction: column;
+  max-width: 1240px;
+  margin: 1rem auto;
+  padding: 0 2rem 3rem;
+  text-align: left;
+}
+.recipeInfo__title {
+  font-size: 3rem;
+  margin: 2rem 0 1rem;
+  font-weight: bolder;
+}
+.recipeInfo__data {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 0.5rem;
+}
+.recipeInfo__numReview {
+  color: var(--dark-clr);
+}
+.recipeInfo__description {
+  font-size: 1.2rem;
+  margin-bottom: 0.2rem;
+}
+.recipeInfo__reviews,
+.recipeInfo__time,
+.btn__print,
+.btn__save,
+.btn__share,
+.btn__watch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.3rem;
+}
+.recipeInfo__category {
+  color: var(--dark-clr, #333);
+  font-weight: bolder;
+  border-bottom: 2px solid var(--main-clr, #f8ab15);
+  width: fit-content;
+}
+
+/*------------------------- Left Part */
+.recipeInfo__left {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: relative;
+  flex: 1;
+}
+.recipeInfo__img {
+  padding-left: 3rem;
+}
+.recipeInfo__img img {
+  width: 100%;
+}
+.recipeInfo__btns {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.btn {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+.btn i {
+  font-size: 1.4rem;
+}
+.btn__watch {
+  border: 1px solid #c4302b;
+  color: #c4302b;
+  transition: 0.2s;
+}
+.btn__watch:hover {
+  background-color: #c4302b;
+  color: #ddd;
+}
+.btn__save {
+  border: 1px solid #fc2222;
+  color: #fc2222;
+  transition: 0.2s;
+}
+.btn__save:hover {
+  background-color: #fc2222;
+  color: #ddd;
+}
+.btn__share {
+  border: 1px solid #1d1dfd;
+  color: #1d1dfd;
+  transition: 0.2s;
+}
+.btn__share:hover {
+  background-color: #1d1dfd;
+  color: #ddd;
+}
+.btn__print {
+  border: 1px solid gray;
+  color: gray;
+  transition: 0.2s;
+}
+.btn__print:hover {
+  background-color: gray;
+  color: #222;
+}
+
+.recipeInfo__content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding-bottom: 1rem;
+}
+
+/* Right part */
+.recipeInfo__right {
+  flex: 1;
+}
+
+/* Reviews */
+.reviews {
+  padding: 3rem 0;
+}
+.reviews__box {
+  padding: 1rem;
+  border: 1px solid var(--dark-clr, #333);
+  background: var(--lightGray-clr, #ccc);
+}
+.reviews__box__btn {
+  padding: 1rem;
+}
+.reviews__box__btn button {
+  border: none;
+  outline: none;
+  padding: 0.7rem 1.4rem;
+  border-radius: 20px;
+  background: var(--main-clr, #f8ab15);
+  color: var(--dark-clr, #333);
+}
+.reviews__box__section {
+  border-top: 2px solid var(--dark-clr, #333);
+}
+.review {
+  padding: 1rem 0;
+}
+
+/* Reviews Modal */
+.review__modal {
+  width: 60%;
+  height: 60vh;
+}
+.modal__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: var(--main-clr, #f8ab15);
+  color: var(--dark-clr, #333);
+  padding: 0.5rem;
+}
+.modal__text {
+  margin: 0;
+}
+.modal__close__btn i {
+  color: var(--dark-clr, #333);
+}
+.modal__body {
+  background-color: var(--white-clr, #fff);
+  padding: 2rem;
+}
+.modal__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 2rem;
+  padding: 2rem 0;
+  width: 500px;
+  height: 300px;
+}
+.modal__input__message {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  padding: 0.5rem;
+}
+.modal__input__img {
+  display: none;
+}
+.modal__label__img {
+  position: relative;
+  flex: 1;
+  border: 1px solid var(--main-clr, #f8ab15);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+}
+.modal__label__img i {
+  padding: 1rem;
+  font-size: 6rem;
+  border-radius: 50%;
+  border: 1px solid var(--main-clr, #f8ab15);
+}
+/* When User Upload img */
+.modal__user__img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.modal__submit__btn {
+  width: 100%;
+  text-align: center;
+  padding: 0.7rem 1.2rem;
+  background-color: var(--main-clr, #f8ab15);
+  color: var(--dark-clr, #333);
+  border: none;
+  outline: none;
 }
