--- a/src/components/site/recipe/recipe.css
+++ b/src/components/site/recipe/recipe.css
@@ -7,7 +7,7 @@
   background-color: var(--white-clr, #fff);
   transition: 0.3s;
   border-radius: 20px;
-  max-width: 420px;
+  max-height: 420px;
 }
 .one-recipe:hover {
   box-shadow: var(--recipe-shadow, 0 8px 32px hsla(0, 0%, 10%, 0.1));
