--- a/src/components/site/search/search.css
+++ b/src/components/site/search/search.css
@@ -67,8 +67,15 @@
   align-items: center;
   gap: 0.5rem;
 }
+.categorie p {
+  color: var(--dark-clr);
+}
 .categorie__img {
   border-radius: 50%;
+  width: 80px;
+  object-fit: cover;
+  height: 85px;
+  object-position: center;
 }
 
 @media (max-width: 950px) {
