--- a/src/components/site/recipe/recipe.css
+++ b/src/components/site/recipe/recipe.css
@@ -8,10 +8,15 @@
   transition: 0.3s;
   border-radius: 20px;
   max-width: 420px;
-  max-height: 430px;
+  height: auto;
 }
 .one-recipe:hover {
   box-shadow: var(--recipe-shadow, 0 8px 32px hsla(0, 0%, 10%, 0.1));
+}
+.favBtn {
+  border: none;
+  background-color: none;
+  margin-bottom: 0.5rem;
 }
 
 .one-recipe__img {
